@@ -1,12 +1,41 @@
-FROM hypriot/rpi-java
-WORKDIR /app
-COPY .mvn/ .mvn
-COPY mvnw pom.xml ./
-RUN chmod +x ./mvnw
-RUN ./mvnw dependency:go-offline
-COPY src ./src
-EXPOSE 8080
-CMD ["./mvnw", "spring-boot:run"]
+FROM azul/zulu-openjdk-alpine:11 as packager
+
+RUN { \
+        java --version ; \
+        echo "jlink version:" && \
+        jlink --version ; \
+    }
+
+ENV JAVA_MINIMAL=/opt/jre
+
+# build modules distribution
+RUN jlink \
+    --verbose \
+    --add-modules \
+        java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
+        # java.naming - javax/naming/NamingException
+        # java.desktop - java/beans/PropertyEditorSupport
+        # java.management - javax/management/MBeanServer
+        # java.security.jgss - org/ietf/jgss/GSSException
+        # java.instrument - java/lang/instrument/IllegalClassFormatException
+    --compress 2 \
+    --strip-debug \
+    --no-header-files \
+    --no-man-pages \
+    --output "$JAVA_MINIMAL"
+
+# Second stage, add only our minimal "JRE" distr and our app
+FROM alpine
+
+ENV JAVA_MINIMAL=/opt/jre
+ENV PATH="$PATH:$JAVA_MINIMAL/bin"
+
+COPY --from=packager "$JAVA_MINIMAL" "$JAVA_MINIMAL"
+COPY "build/libs/opt/cloud-gateway.jar" "/opt/cloud-gateway.jar"
+
+EXPOSE 8999
+CMD [ "-jar", "/opt/cloud-gateway.jar" ]
+ENTRYPOINT [ "java" ]
 
 #FROM arm32v7/adoptopenjdk:11-jdk-hotspot
 #WORKDIR /app
